# ITMO_containers_course

./: README.md
lab1/: README.md  bad_Dockerfile  good_Dockerfile  requirements.txt
lab1/app/: main.py
lab1/app/routers/: __init__.py  hello.py
lab2/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
lab2/app/: main.py
lab2/app/api/routers/: __init__.py  users.py
lab2/app/api/schemas/: schemas.py
lab2/app/db/: __init__.py  db.py  models.py
lab2/migrations/: env.py
lab2/migrations/versions/: 43ce0d49b4f7_create_users_table.py
lab3/: README.md  nextcloud-configmap.yml  nextcloud.yml  pg_configmap.yml  pg_deployment.yml  pg_secret.yml
lab4/: README.md  app-deployment.yml  configmap.yml  db-deployment.yml  db-service.yml  secret.yml
