[project]
name = "lab2"
version = "0.1.0"
description = "ITMO LAB 2"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.0",
    "fastapi==0.124.0",
    "idna==3.11",
    "pydantic-core==2.41.5",
    "pydantic==2.12.5",
    "starlette==0.50.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "uvicorn==0.34.0",
    "alembic>=1.17.2",
    "sqlalchemy>=2.0.44",
    "psycopg[binary]>=3.3.2",
]
